style: update body font size and background image; adjust footer padding fix: correct spacing in home.html description

--- a/Style/style.css
+++ b/Style/style.css
@@ -10,10 +10,10 @@ body{
  font-family: Georgia, 'Times New Roman', Times, serif;
  border:black 5px;
  text-shadow: 1px 0.5px ;
- font-size: 20px;
+ font-size: 1.4rem;
  line-height: 1.5;
- background-image: radial-gradient(circle, rgb(120, 230, 120), rgb(243, 218, 218));
- margin: 10px 5px 5px 5px;
+ background-image: radial-gradient(circle, rgb(249, 242, 242), rgb(167, 167, 167));
+ margin: 10px 10px 10px 10px;
 
 
 }
@@ -29,7 +29,7 @@ footer{
     font-style: italic;
     font-size: medium;
     color: white;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
 }
 section{
